# PC-control

./: README.md.pub
01-Stepped Motor Design - Paper/: Stepper Motor and Control Project.aux  Stepper Motor and Control Project.lol  Stepper Motor and Control Project.out  Stepper Motor and Control Project.tex  Stepper Motor and Control Project.toc
02 - Mechanical model/: BAR.SLDPRT  BASE.SLDPRT  BeltLink1.SLDPRT  Cable_1-PROJECT.sldasm  Cable_2-PROJECT.sldasm  Harness_1-PROJECT.sldasm  L298.SLDPRT  MOTOR.SLDPRT  MOTOR_AXIS.SLDPRT  MOTOR_no_AXIS.SLDPRT  RAIL.SLDPRT  bARHOLDER.SLDPRT  dRIVER.SLDPRT
02 - Mechanical model/Stepper/: MICROCON_stepper motor_NEMA 17_SX17-1005LQCEF_(no texts).stp
02 - Mechanical model/dc-power-connector-pj-037ah-1.snapshot.2/: DC Power Connector(PJ-037AH).SLDPRT
02 - Mechanical model/h-bridge-circuit-l298-1.snapshot.1/: L298.ipt  L298.stp
02 - Mechanical model/model-of-3d-printer-1.snapshot.6/: printer 6_grab v1.step
03 - Arduino/MotorControl/: MotorControl.ino
05 - PC Control - Serial_Communication/: CMakeLists.txt  main.cpp  main.hpp
